# modded-nanogpt

./: .gitignore  CHANGES.md  bah.py  benchmark.py  example_usage.py  main.py  modal_common.py  modal_convert_pdf.py  mtp.py  mytrainer.py  ops.py  optimizer.py  play.ipynb  pyproject.toml  recursive_modal.py  requirements.txt  setup.bash  test.py  torchFeatureRequest.md  train_gpt.py  train_gpt_local.py  trainer_registry.py  utils.py
MLE_Agent/: agent_viz.py  demo.py  mcp_server.py  memory_server.py  modal_mcp_tools.py  mpc_client.py  sandbox_test.py  stateful_sb.py  test_script.py  todo.txt  tools.py  upload_script.py  utils.py
MLE_Agent/environments/: cifar_speedrun.py  cifar_speedrun_unoptimized.py  (+2 more)
benchmarks/: benchmark_attn_mechanisms.py  benchmark_mlp_mechanisms.py  nsa_benchmark.py
configs/: README.md  README_hydra.md  SUMMARY.md  config.yaml  current_best_gpt.yaml  d3pm.yaml  data.yaml  default_model_adapter.py  gpt2.yaml  hnet.yaml  hnet_x_nsa.yaml  mamba.yaml  mdl.yaml  megabyte.yaml  mod.yaml  moe.yaml  mtm.yaml  mtp.yaml  ngpt.yaml  nsa.yaml  rd.yaml  sedd.yaml  test_configs.py  training.yaml  vanilla.yaml
kernels/: benchmark_topk_matmul.py  topk_matmul.py
models/: Current_best_gpt.py  D3PM.py  LLMBase.py  MDLM.py  Mamba.py  MegaByte.py  MixtureOfDepths.py  MixtureOfExperts.py  MultiTokenModel.py  Nsa.py  RecurrentDepth.py  SEDD.py  VanillaTransformer.py  __init__.py  configs.py  gpt2.py  hnet.py  hnet_x_nsa.py  memory_at_scale.py  mtp_model.py  ngpt.py  peerlayer.py  protocols.py  recurrent_depth.py  shared.py  titans.py  ttt.py  ultra_sparse_mem.py
(+19 files in other folders)
